--- a/templates/index.html
+++ b/templates/index.html
@@ -4,32 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitio de reclamos</title>
+    <link rel="stylesheet" href="/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <h1>Sitio de Reclamos</h1>
-    </header>
     <main>
-        <form>
-            <p>Ingresá tu usuario</p>
-            <input
-                class="clampo__field"
-                type="text"
-                placeholder="Usuario"
-                id="usuario">
-            <p>Ingresá tu contraseña</p>
-            <input
-            class="clampo__field"
-            type="text"
-            placeholder="Contraseña"
-            id="contrasenia">
-            <p>¿Has olvidado tu contraseña?</p>
-            <input type="submit" value="Enviar" class="boton boton--primario">
-        </form>
-        <p>¿No tenés usuario?</p>
-        <p>Registrate</p>
-        
+        <section class="container">
+            <h1>Sitio de reclamos</h1>
+            <form id="login-form">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Nombre de Usuario:</label>
+                    <input type="text" class="form-control" id="username" name="username" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña:</label>
+                    <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+                <div class="d-grid gap-2 mb-3">
+                    <button type="submit" class="btn btn-primary" onclick="login()">Iniciar Sesión</button>
+                </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-link" id="show-register-form" onclick="showRegisterForm()">Regístrate</button>
+                </div>
+
+            </form>
+            <form id="register-form" style="display: none;">
+                <div class="mb-3">
+                    <label for="register-username" class="form-label">Nombre de Usuario:</label>
+                    <input type="text" class="form-control" id="register-username" name="register-username" required>
+                </div>
+                <div class="mb-3">
+                    <label for="register-password" class="form-label">Contraseña:</label>
+                    <input type="password" class="form-control" id="register-password" name="register-password" required>
+                </div>
+                <div class="mb-3">
+                    <label for="user-type" class="form-label">Tipo de Usuario:</label>
+                    <select class="form-select" id="user-type" name="user-type" required>
+                        <option value="" disabled selected>Selecciona tu tipo de usuario</option>
+                        <option value="consorcista">Consorcista</option>
+                        <option value="dueno_inquilino">Dueño/Inquilino</option>
+                    </select>
+                </div>
+                <div class="d-grid gap-2 mb-3">
+                    <button type="submit" class="btn btn-success">Registrarse</button>
+                </div>
+            </form>
+        </section>
+            
     </main>
-    
+    <script src="/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
