--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <main>
         <section class="container">
             <h1>Sitio de reclamos</h1>
-            <form id="login-form">
+            <form id="login-form" action="/auth/login" method="post">
                 <div class="mb-3">
                     <label for="username" class="form-label">Nombre de Usuario:</label>
                     <input type="text" class="form-control" id="username" name="username" required>
@@ -21,7 +21,7 @@
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <div class="d-grid gap-2 mb-3">
-                    <button type="submit" class="btn btn-primary" onclick="login()">Iniciar Sesión</button>
+                    <button type="submit" class="btn btn-primary" onclick="login1()">Iniciar Sesión</button>
                 </div>
                 <div class="text-center">
                     <button type="button" class="btn btn-link" id="show-register-form" onclick="showRegisterForm()">Regístrate</button>
