--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -11,17 +11,17 @@
     <main>
         <section class="container">
             <h1>Sitio de reclamos</h1>
-            <form id="login-form" action="/auth/login" method="post">
+            <form id="login-form" method="post" >
                 <div class="mb-3">
-                    <label for="username" class="form-label">Nombre de Usuario:</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
+                    <label for="nombreUsuario" class="form-label">Nombre de Usuario:</label>
+                    <input type="text" class="form-control" id="nombreUsuario" name="nombreUsuario" required>
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label">Contraseña:</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
+                    <label for="contrasenia" class="form-label">Contraseña:</label>
+                    <input type="password" class="form-control" id="contrasenia" name="contrasenia" required>
                 </div>
                 <div class="d-grid gap-2 mb-3">
-                    <button type="submit" class="btn btn-primary" onclick="login1()">Iniciar Sesión</button>
+                    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
                 </div>
                 <div class="text-center">
                     <button type="button" class="btn btn-link" id="show-register-form" onclick="showRegisterForm()">Regístrate</button>
@@ -39,10 +39,22 @@
                 </div>
                 <div class="mb-3">
                     <label for="user-type" class="form-label">Tipo de Usuario:</label>
-                    <select class="form-select" id="user-type" name="user-type" required>
+                    <select class="form-select" id="user-type" name="user-type" required onchange="toggleUnitSelection()">
                         <option value="" disabled selected>Selecciona tu tipo de usuario</option>
                         <option value="consorcista">Consorcista</option>
                         <option value="dueno_inquilino">Dueño/Inquilino</option>
+                    </select>
+                </div>
+                <div class="mb-3" style="display: none;" id="edif-selection">
+                    <label for="user-type" class="form-label">Selecione su Edificio</label>
+                    <select class="form-select" id="edif_type" name="user-type" required>
+                        <!-- llenar con edificios -->
+                    </select>
+                </div>
+                <div class="mb-3" id="unit-selection" style="display: none;">
+                    <label for="user-unit" class="form-label">Selecciona tu unidad:</label>
+                    <select class="form-select" id="unit-list" name="unit-list">
+                        <!-- llenar con unidades -->
                     </select>
                 </div>
                 <div class="d-grid gap-2 mb-3">
@@ -52,7 +64,7 @@
         </section>
             
     </main>
-    <script src="/script.js"></script>
+    <script src="/demo/src/main/resources/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
