--- a/demo/src/main/resources/templates/misReclamos.html
+++ b/demo/src/main/resources/templates/misReclamos.html
@@ -4,31 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Reclamos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <div>
-            <p>RECLAMOS</p>
-        </div>
-    </header>
     <main>
-        <p>Bienvenido/a</p>
-        <div>
-            <h2>Mis Reclamos</h2>
-        </div>
-       
-        <div>
-            <button>Filtros</button>
-        </div>
-        <div>
-            <h3>Id:</h3>
-            <p>Unidad:</p>
-            <p>Descripción:</p>
-            <p>Estado:</p>
-        </div>
-        <button>+ Nuevo reclamo</button>
-        
-    </main>
+        <header>
+            <!--Bienvenido nombre (react)-->
+            <h3>MisReclamos</h3>
+            <div class="container">
+                <label for="filter-state">Filtrar por Estado:</label>
+                <select id="filter-state" onchange="filterCards()">
+                    <option value="todos">Todos</option>
+                    <option value="ab">Abierto</option>
+                    <option value="des">Desestimado</option>
+                    <option value="pro">En proceso</option>
+                    <option value="term">Terminado</option>
+                </select>
+                <button type="button" class="btn btn-primary" onclick="">Nuevo Reclamo</button>
+            </div>
+        </header>
+        <section>
+            <form id="newreclamo-form" style="display: none;">
+                <h1>id: generado en bs</h1>
+                <div class="form-check form-check-inline" required onchange="toggleSelection()">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="unidad">
+                    <label class="form-check-label" for="inlineRadio1">Unidad</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="aC">
+                    <label class="form-check-label" for="inlineRadio2">Area Comun</label>
+                </div>
+                <div class="mb-3" id="aC-selection" style="display: none;">
+                    <label for="uC-unit" class="form-label">Selecciona Area Comun</label>
+                    <select class="form-select" id="aC-list" name="aC-list">
+                        <!-- llenar con unidades -->
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Descripcion:</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Agregar imagenes:</label>
+                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                  </div>
+                <div class="d-grid gap-2 mb-3">
+                    <button type="submit" class="btn btn-success">Registrarlo</button>
+                </div>
+            </form>
+        </section>
+        <section class="container cards">
+            <!--aca cards desde base de datos-->
+            <div class="card" style="width: 18rem;" data-estado="ab">
+                <div class="card-body">
+                    <h5 class="card-title">ID:</h5>
+                    <h6>Unidad:</h6>
+                    <h6>Descripción</h6>
+                    <h6>Estado: Activo</h6>
+                </div>
+            </div>
     
+            <div class="card" style="width: 18rem;" data-estado="des">
+                <div class="card-body">
+                    <h5 class="card-title">ID:</h5>
+                    <h6>Unidad:</h6>
+                    <h6>Descripción</h6>
+                    <h6>Estado: Inactivo</h6>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="/demo/src/main/resources/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
