--- a/demo/src/main/resources/templates/reclamos2.html
+++ b/demo/src/main/resources/templates/reclamos2.html
@@ -4,26 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reclamos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <div>
-            <p>RECLAMOS</p>
-        </div>
+        <header>
+            <!--Bienvenido nombre (react)-->
+            <div class="mb-3" id="edif-select">
+                <label for="user-type" class="form-label">Selecione Edificio</label>
+                <select class="form-select" id="edif_type" name="user-type" required>
+                    <!-- llenar con edificios -->
+                </select>
+            </div>
+            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                <label class="btn btn-outline-primary" for="btnradio1">Reclamos</label>
+              
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                <label class="btn btn-outline-primary" for="btnradio2">Unidades</label>
+              
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                <label class="btn btn-outline-primary" for="btnradio3">Registros</label>
+            </div>
+
+
+        
+        </header>
     </header>
     <main>
-        <div>
-            <h1>Reclamos:</h1>
-            <h1>Independencia 200</h1>
-        </div>
-        <div>
-            <p>Reclamo</p>
-        </div>
-
-        <div>
-            <button>Cargar reclamo</button>
-        </div>
+        <section>
+            <!--mostrar q  (react)-->
+            <div class="container">
+                <label for="filter-state">Filtrar por Estado:</label>
+                <select id="filter-state" onchange="filterCards()">
+                    <option value="todos">Todos</option>
+                    <option value="ab">Abierto</option>
+                    <option value="des">Desestimado</option>
+                    <option value="pro">En proceso</option>
+                    <option value="term">Terminado</option>
+                </select>
+                <button type="button" class="btn btn-primary" onclick="">Modificar Reclamo</button>
+            </div>
+            <form id="modif_reclamo-form" style="display: none;">
+                <div class="mb-3">
+                    <label for="ID-TYPE" class="form-label">ID:</label>
+                    <select class="form-select" id="user-type" name="user-type" required >
+                        <option value="" disabled selected>Selecciona ID</option>
+                         <!-- llenar con ids -->
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="estado-TYPE" class="form-label">Cambiar estado</label>
+                    <select class="form-select" id="user-type" name="user-type" required >
+                        <option value="" disabled selected>muestra el estado en q esta</option>
+                        <option value="ab">Abierto</option>
+                        <option value="des">Desestimado</option>
+                        <option value="pro">En proceso</option>
+                        <option value="term">Terminado</option>
+                    </select>
+                </div>
+                <div class="d-grid gap-2 mb-3">
+                    <button type="submit" class="btn btn-success">Guardarlo</button>
+                </div>
+            </form>
+        </section>
+        
+        
+        <section class="container cards">
+            <!--aca cards unidades, reclamos o solicitudes desde base de datos-->
+            <div class="card" style="width: 18rem;" data-estado="ab">
+                <div class="card-body">
+                    <h5 class="card-title">ID:</h5>
+                    <h6>Unidad:</h6>
+                    <h6>Descripción</h6>
+                    <h6>Estado: Activo</h6>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;" data-estado="des">
+                <div class="card-body">
+                    <h5 class="card-title">ID:</h5>
+                    <h6>Unidad:</h6>
+                    <h6>Descripción</h6>
+                    <h6>Estado: Inactivo</h6>
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="/demo/src/main/resources/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
 </html>
