--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <main>
         <section class="container">
             <h1>Sitio de reclamos</h1>
-            <form id="login-form"  method="post"  onsubmit="submitForm(event)">
+            <form id="login-form"  method="post" action="/login" onsubmit="submitForm(event)">
                 <div class="mb-3">
                     <label for="nombreUsuario" class="form-label">Nombre de Usuario:</label>
                     <input type="text" class="form-control" id="nombreUsuario" name="nombreUsuario" required>
@@ -27,7 +27,6 @@
                 <div class="text-center">
                     <button type="button" class="btn btn-link" id="show-register-form" onclick="showRegisterForm()">Regístrate</button>
                 </div>
-
             </form>
             <form id="register-form" style="display: none;">
                 <div class="mb-3">
