--- a/demo/src/main/resources/templates/reclamos2.html
+++ b/demo/src/main/resources/templates/reclamos2.html
@@ -134,7 +134,7 @@
             <div id="div2">
                 <div class="row justify-content-center" id="tarjetas">
                     <!--aca cards desde base de datos-->
-                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                    <div class="card col-md-4 mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Número de Unidad: 101</h5>
                             <h6>Piso: 6</h6>
@@ -144,7 +144,7 @@
                             <h6>Habitantes: Candela, Nicolas</h6>
                         </div>
                     </div>
-                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;">
+                    <div class="card  col-md-4 mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Número de Unidad: 134</h5>
                             <h6>Piso: 3</h6>
@@ -163,13 +163,13 @@
             <div id="div3">
                 <div class="row justify-content-center" id="tarjetas">
                     <!--aca cards desde base de datos-->
-                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                    <div class="card  col-md-4 mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Registro 1</h5>
                             
                         </div>
                     </div>
-                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;">
+                    <div class="card col-md-4 mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Registro 2</h5>
                         </div>
@@ -180,13 +180,13 @@
             <div id="div4">
                 <div class="row justify-content-center" id="tarjetas">
                     <!--aca cards desde base de datos-->
-                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                    <div class="card  col-md-4 mb-3" style="width: 18rem;" >
                         <div class="card-body">
                             <h5 class="card-title">Pileta</h5>
                             <h6>Piso: 7</h6>
                         </div>
                     </div>
-                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;">
+                    <div class="card  col-md-4 mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">SUM</h5>
                             <h6>Piso: -1</h6>
